# Competitive-Programming

./: CMakeLists.txt  LICENSE  Lecture.cpp  README.md  Template.cpp  deffreus'.h
0800/: Beautiful Matrix.cpp  Beautiful Year.cpp  Domino piling.cpp  Games.cpp  Helpful Math.cpp  I Wanna Be the Guy.cpp  Insomnia cure.cpp  Nearly Lucky Number.cpp  Plus-Minus Split  Satisfying Constraints.cpp  Soldier and Bananas.cpp  Square.cpp  Ultra-Fast Mathematician.cpp  Watermelon.cpp  testing.cpp  tmp
1000/: -69A.cpp  Badge.cpp  BowWow and the Timetable.cpp  Raising Bacteria.cpp  tmp
1200/: -1736B.cpp
800/: Anton and Polyhedrons.cpp  Arranging Cats.cpp  Arrival of the General.cpp  Bear and Big Brother.cpp  Bit++.cpp  Boy or Girl.cpp  Drinks.cpp  Hulk.cpp  In Search of an Easy Problem.cpp  Magnets.cpp  Next Round.cpp  Queue at the School .cpp  Tram.cpp  Vanya and Fence.cpp  Wrong Subtraction.cpp
800/.cph/: .In Search of an Easy Problem.cpp_39036225dd773df5e85bc55277c42b6a.prob
800/output/In Search of an Easy Problem.dSYM/Contents/: Info.plist
800/output/In Search of an Easy Problem.dSYM/Contents/Resources/DWARF/: In Search of an Easy Problem
CSES/: Apartments.cpp  Concert Tickets.cpp  Dice Combinations.cpp  Distinct Numbers.cpp  Ferris Wheel.cpp  Maximum Subarray Sum.cpp  Missing Coin Sum.cpp  Movie Festival.cpp  Restaurant Customers.cpp  Stick Lengths.cpp  Sum of Two Values.cpp  Weird Algorithm.cpp
Canadian Computing Competition/: Crazy Fencing.cpp  Modern Art.cpp
CodeForces/0800/: Anton and Danik.cpp  Anton and Letters.cpp  Calculating Function.cpp  Divisibility Problem.cpp  Elephant.cpp  George and Accommodation.cpp  Hit the Lottery.cpp  Is your horseshoe on the other hoof?.cpp  Pangram.cpp  Petya and Strings.cpp  Presents.cpp  Stones on the Table.cpp  Team.cpp  Translation.cpp  Tricky Template.cpp  Way Too Long Words.cpp  We Got Everything Covered!.cpp  Word Capitalization.cpp  Word.cpp
CodeForces/0800/output/: In Search of an Easy Problem
CodeForces/0800/output/In Search of an Easy Problem.dSYM/Contents/Resources/Relocations/aarch64/: In Search of an Easy Problem.yml
CodeForces/1000/: -118A.cpp  -122A.cpp  -1A.cpp  -58A.cpp
CodeForces/1400/: -479B.cpp  tmp
ILPC/: ILPC.cpp
Others/: Badge.cpp  Interesting Drink.cpp  betterTest.c++  bubble_sort.cpp  chpInit.c++  main.cpp  requestSavero.cpp  test.cpp
TLX/Kotlin VS TLX/Pemrograman Dasar/: 00. A. Printer.kt  01. A. Halo, Dunia!.kt  03. B. A Tambah B.kt  03. C. Burung Beo.kt  03. D. Bebek untuk Teman.kt  03. E. Luas Segitiga.kt  03. F. Transpos Matriks.kt  05. B. If Then.kt  05. C. If Then Multi.kt  05. D. If Then Else.kt  05. E. If Then Case.kt  05. F. Floor and Ceiling.kt  05. G. Jarak Manhattan.kt  06. B. For.kt  06. C. While.kt  06. D. While + Pencacah.kt  06. E. Dua Pangkat.kt  06. F. Faktor Bilangan.kt  06. G. Statistika Sederhana.kt  06. H. Pola I.kt  07. A. Break Continue Exit.kt  07. B. Pola II.kt  07. C. Pola III.kt  08. B. Cek Bilangan Prima.kt  08. C. Bilangan Agak Prima.kt  09. B. Balik Datar.kt  09. C. Modus Terbesar.kt  09. D. Rotasi Matriks.kt  09. E. Perkalian Matriks.kt  10. B. Tukang Sulap.kt  10. C. Membalik yang Terbalik.kt  hellowoelrdddxd.java  test.kt
TLX/Kotlin VS TLX/Pemrograman Kompetitif Dasar/: B. Pangkat Besar.kt
TLX/Pemrograman Dasar/: 13. A. Permutasi Zig-Zag.cpp  13. E. Quadtree I: Pengkodean.cpp
TLX/Pemrograman Kompetitif Dasar/: 01. A. Seleksi Olimpiade.cpp  01. B. Runtuh.cpp  01. C. Wildcard.cpp  02. A. Penjumlahan Pecahan.cpp  02. B. Prima Ke-K.cpp
