cmake_minimum_required(VERSION 3.27)
project(untitled)

set(CMAKE_CXX_STANDARD 23)

add_executable(
        untitled
        800/Watermelon.cpp
        "800/Way Too Long Words.cpp"
        800/Team.cpp
        "800/Next Round.cpp"
        800/Bit++.cpp
        800/testing.cpp
        "800/Domino piling.cpp"
        "800/Beautiful Matrix.cpp"
        "800/Beautiful Matrix.cpp"
        "800/Petya and Strings.cpp"
        "800/Helpful Math.cpp"
        "800/Word Capitalization.cpp"
        "800/Boy or Girl.cpp"
        "800/Stones on the Table.cpp"
        "800/Bear and Big Brother.cpp"
        800/Elephant.cpp
        "800/Soldier and Bananas.cpp"
        800/Word.cpp
        "800/Wrong Subtraction.cpp"
        "800/Nearly Lucky Number.cpp"
        "800/Anton and Danik.cpp"
        800/Translation.cpp
        deffreus'.h
        800/Tram.cpp
        "800/Vanya and Fence.cpp"
        "800/Queue at the School .cpp"
        "800/Queue at the School .cpp"
        "800/Beautiful Year.cpp"
        "800/In Search of an Easy Problem.cpp"
        "800/George and Accommodation.cpp"
        800/Magnets.cpp
        800/Presents.cpp
        "800/Calculating Function.cpp"
        800/Drinks.cpp
        "800/Ultra-Fast Mathematician.cpp"
        "800/Is your horseshoe on the other hoof?.cpp"
        800/Hulk.cpp
        "800/Divisibility Problem.cpp"
        "800/I Wanna Be the Guy.cpp"
        "800/Arrival of the General.cpp"
        800/Pangram.cpp
        "800/Insomnia cure.cpp"
        "800/Anton and Letters.cpp"
        "800/Hit the Lottery.cpp"
        "800/Anton and Polyhedrons.cpp"
        "1000/Raising Bacteria.cpp"
        "1000/BowWow and the Timetable.cpp"
        1000/-1A.cpp
        1000/-118A.cpp
        1000/-69A.cpp
        1000/-58A.cpp
        1000/-122A.cpp
        1400/-479B.cpp
        ILPC/ILPC.cpp
        1200/-1736B.cpp
        1200/-1736B.cpp
        1200/-1736B.cpp
        1200/-1736B.cpp
        1200/-1736B.cpp
        1200/-1736B.cpp
        "TLX/Pemrograman Dasar/13. A. Permutasi Zig-Zag.cpp"
        "TLX/Pemrograman Dasar/13. E. Quadtree I: Pengkodean.cpp"
        Template.cpp
        "TLX/Pemrograman Kompetitif Dasar/01. A. Seleksi Olimpiade.cpp"
        "800/We Got Everything Covered!.cpp"
        "800/Tricky Template.cpp"
        "800/Arranging Cats.cpp"
        800/Square.cpp
        "800/Satisfying Constraints.cpp"
        Badge.cpp
        "Interesting Drink.cpp"
        Lecture.cpp
        "TLX/Pemrograman Kompetitif Dasar/01. B. Runtuh.cpp"
        "TLX/Pemrograman Kompetitif Dasar/02. A. Penjumlahan Pecahan.cpp"
        "TLX/Pemrograman Kompetitif Dasar/02. B. Prima Ke-K.cpp"
        "Canadian Computing Competition/Crazy Fencing.cpp"
)
