cmake_minimum_required(VERSION 3.27)
project(untitled)

set(CMAKE_CXX_STANDARD 23)

add_executable(
        untitled
        CodeForces/0800/Watermelon.cpp 
        "CodeForces/0800/Way Too Long Words.cpp"
        CodeForces/0800/Team.cpp
        "CodeForces/0800/Next Round.cpp"
        CodeForces/0800/Bit++.cpp
        CodeForces/0800/testing.cpp
        "CodeForces/0800/Domino piling.cpp"
        "CodeForces/0800/Beautiful Matrix.cpp"
        "CodeForces/0800/Beautiful Matrix.cpp"
        "CodeForces/0800/Petya and Strings.cpp"
        "CodeForces/0800/Helpful Math.cpp"
        "CodeForces/0800/Word Capitalization.cpp"
        "CodeForces/0800/Boy or Girl.cpp"
        "CodeForces/0800/Stones on the Table.cpp"
        "CodeForces/0800/Bear and Big Brother.cpp"
        CodeForces/0800/Elephant.cpp
        "CodeForces/0800/Soldier and Bananas.cpp"
        CodeForces/0800/Word.cpp
        "CodeForces/0800/Wrong Subtraction.cpp"
        "CodeForces/0800/Nearly Lucky Number.cpp"
        "CodeForces/0800/Anton and Danik.cpp"
        CodeForces/0800/Translation.cpp
        deffreus'.h
        CodeForces/0800/Tram.cpp
        "CodeForces/0800/Vanya and Fence.cpp"
        "CodeForces/0800/Queue at the School .cpp"
        "CodeForces/0800/Queue at the School .cpp"
        "CodeForces/0800/Beautiful Year.cpp"
        "CodeForces/0800/In Search of an Easy Problem.cpp"
        "CodeForces/0800/George and Accommodation.cpp"
        CodeForces/0800/Magnets.cpp
        CodeForces/0800/Presents.cpp
        "CodeForces/0800/Calculating Function.cpp"
        CodeForces/0800/Drinks.cpp
        "CodeForces/0800/Ultra-Fast Mathematician.cpp"
        "CodeForces/0800/Is your horseshoe on the other hoof?.cpp"
        CodeForces/0800/Hulk.cpp
        "CodeForces/0800/Divisibility Problem.cpp"
        "CodeForces/0800/I Wanna Be the Guy.cpp"
        "CodeForces/0800/Arrival of the General.cpp"
        CodeForces/0800/Pangram.cpp
        "CodeForces/0800/Insomnia cure.cpp"
        "CodeForces/0800/Anton and Letters.cpp"
        "CodeForces/0800/Hit the Lottery.cpp"
        "CodeForces/0800/Anton and Polyhedrons.cpp"
        "CodeForces/1000/Raising Bacteria.cpp"
        "CodeForces/1000/BowWow and the Timetable.cpp"
        CodeForces/1000/-1A.cpp
        CodeForces/1000/-118A.cpp
        CodeForces/1000/-69A.cpp
        CodeForces/1000/-58A.cpp
        CodeForces/1000/-122A.cpp
        CodeForces/1400/-479B.cpp
        ILPC/ILPC.cpp
        CodeForces/1200/-1736B.cpp
        "TLX/Pemrograman Dasar/13. A. Permutasi Zig-Zag.cpp"
        "TLX/Pemrograman Dasar/13. E. Quadtree I: Pengkodean.cpp"
        Template.cpp
        "TLX/Pemrograman Kompetitif Dasar/01. A. Seleksi Olimpiade.cpp"
        "CodeForces/0800/We Got Everything Covered!.cpp"
        "CodeForces/0800/Tricky Template.cpp"
        "CodeForces/0800/Arranging Cats.cpp"
        CodeForces/0800/Square.cpp
        "CodeForces/0800/Satisfying Constraints.cpp"
        Others/Badge.cpp
        "Others/Interesting Drink.cpp"
        Others/Lecture.cpp
        "TLX/Pemrograman Kompetitif Dasar/01. B. Runtuh.cpp"
        "TLX/Pemrograman Kompetitif Dasar/02. A. Penjumlahan Pecahan.cpp"
        "TLX/Pemrograman Kompetitif Dasar/02. B. Prima Ke-K.cpp"
        "Canadian Computing Competition/Crazy Fencing.cpp"
        CodeForces/1400/-479B.cpp
        "Canadian Computing Competition/Modern Art.cpp"
        "Canadian Computing Competition/Modern Art.cpp"
        "Canadian Computing Competition/Modern Art.cpp"
)
